[package]
name = "acidjson"
version = "0.1.1"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"
description="Strongly consistent JSON flat-files"
license = "ISC"
repository="https://github.com/themeliolabs/acidjson"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="1", features=["derive"]}
serde_json="1"
thiserror="1"
atomicwrites="0.3"
